--- a/personal-service/build.gradle
+++ b/personal-service/build.gradle
@@ -23,11 +23,14 @@ repositories {
 
 ext {
 	set('springCloudVersion', "2023.0.0")
+	set('mapStructVersion', "1.5.5.Final")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: "${mapStructVersion}"
+	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: "${mapStructVersion}"
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	compileOnly 'org.projectlombok:lombok'
