--- a/personal-service/src/main/resources/db/changelog/master.yml
+++ b/personal-service/src/main/resources/db/changelog/master.yml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       author: betrayal
       file: classpath:db/changelog/change-02.yml
+  - include:
+      author: betrayal
+      file: classpath:db/changelog/change-03.yml
