--- a/personal-service/build.gradle
+++ b/personal-service/build.gradle
@@ -28,6 +28,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.mapstruct', name: 'mapstruct', version: "${mapStructVersion}"
 	implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: "${mapStructVersion}"
