--- a/personal-service/build.gradle
+++ b/personal-service/build.gradle
@@ -25,6 +25,10 @@ ext {
 	set('springCloudVersion', "2023.0.0")
 }
 
+bootJar {
+	launchScript()
+}
+
 dependencies {
 	// spring
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
