--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,15 @@
-version: "3.5"
+version: "3.6"
 volumes:
   postgres_data:
 services:
-  registry-service:
+  personal-service:
     image: postgres:16.1
     ports:
-      - "5432:5432"
+      - "${PER_SERVICE_DATABASE_PORT}:5432"
     environment:
-      - POSTGRES_DB=medicial
-      - POSTGRES_PASSWORD=551617
-      - POSTGRES_USER=admin
+      - POSTGRES_DB=${PER_SERVICE_DATABASE_SCHEMA}
+      - POSTGRES_PASSWORD=${PER_SERVICE_DATABASE_PASSWORD}
+      - POSTGRES_USER=${PER_SERVICE_DATABASE_USERNAME}
+      - PGDATA=/var/lib/postgresql/data/mydata/
     volumes:
-      - postgres_data:/var/lib/postgresql/data/pgdata
+      - postgres_data:/var/lib/postgresql/data/mydata/
