--- a/personal-service/build.gradle
+++ b/personal-service/build.gradle
@@ -54,6 +54,11 @@ dependencies {
 	//tests
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'net.datafaker:datafaker:2.1.0'
+	testImplementation "org.junit.jupiter:junit-jupiter:5.8.1"
+	testImplementation "org.testcontainers:testcontainers-bom:1.19.7"
+	testImplementation "org.testcontainers:junit-jupiter:1.19.7"
+	testImplementation "org.testcontainers:postgresql:1.19.7"
+
 }
 
 dependencyManagement {
