--- a/personal-service/src/main/resources/application.yml
+++ b/personal-service/src/main/resources/application.yml
@@ -6,17 +6,17 @@ spring:
   jpa:
     show-sql: true
   datasource:
-    url: jdbc:postgresql://${DATABASE_URL}:${DATABASE_PORT}/${DATABASE_SCHEMA}
-    username: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:postgresql://${PER_SERVICE_DATABASE_HOST}:${PER_SERVICE_DATABASE_PORT}/${PER_SERVICE_DATABASE_SCHEMA}
+    username: ${PER_SERVICE_DATABASE_USERNAME}
+    password: ${PER_SERVICE_DATABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   liquibase:
-    driver-class-name: org.postgresql.Driver
-    user: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
-    url: jdbc:postgresql://${DATABASE_URL}:${DATABASE_PORT}/${DATABASE_SCHEMA}
     enabled: true
     change-log: classpath:db/changelog/master.yml
+    user: ${PER_SERVICE_DATABASE_USERNAME}
+    password: ${PER_SERVICE_DATABASE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://${PER_SERVICE_DATABASE_HOST}:${PER_SERVICE_DATABASE_PORT}/${PER_SERVICE_DATABASE_SCHEMA}
 eureka:
   client:
     service-url:
