--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'medicial'
 includeBuild 'registry-service'
 includeBuild 'personal-service'
 includeBuild 'visiting-service'
+includeBuild 'notification-service'
 
