--- a/personal-service/build.gradle
+++ b/personal-service/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
-
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	// database
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.liquibase:liquibase-core'
